FFAA beta public. Closes #7.

--- a/src/pages/all.astro
+++ b/src/pages/all.astro
@@ -1,6 +1,7 @@
 ---
 import * as Content from "astro:content"
 
+import Imports from "../components/common_imports.astro"
 import Footer from "../components/footer.astro"
 import Metadata from "../components/common_metadata.astro"
 import AppsList from "../components/apps_list.astro"
@@ -10,16 +11,15 @@ let apps = await Content.getCollection("metadata")
 
 <!doctype html>
 <html lang="en">
-	<meta charset="UTF-8">
 	<head>
-		<link rel="stylesheet" href="common.css">
+		<Imports/>
 
 		<Metadata/>
-		<title>All Apps - FF Apps Archive (alpha)</title>
+		<title>All Apps - FF Apps Archive</title>
 	</head>
 	<body>
 		<header>
-			<h1><a href="/">All Apps - FF Apps Archive (alpha)</a></h1>
+			<h1><a href="/">All Apps - FF Apps Archive (beta)</a></h1>
 		</header>
 		<main>
 			<AppsList apps={ apps }/>
