--- a/src/components/common_metadata.astro
+++ b/src/components/common_metadata.astro
@@ -1,3 +1,4 @@
 <meta name="color-scheme" content="light dark">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+<link rel="manifest" href="/manifest.json">
 <link rel="sitemap" href="/sitemap-index.xml">
