--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,4 +1,5 @@
 <footer>
+	<p><a href="https://github.com/DanielHerr/FF_Apps_Archive">FFAA is an open source project licensed under MPLv2. Contributions are welcome.</a></p>
 	<p>Firefox is a trademark of Mozilla Foundation. FFAA is not affiliated with Mozilla.</p>
 	<p>FFAA developed by <a href="https://danielherr.software">Daniel Herr Software</a>.</p>
 </footer>
