--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,33 +1,36 @@
 ---
-import Footer from '../components/footer.astro'
-import Metadata from '../components/common_metadata.astro'
+import Imports from "../components/common_imports.astro"
+import Footer from "../components/footer.astro"
+import Metadata from "../components/common_metadata.astro"
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="common.css">
+		<Imports/>
 
 		<Metadata/>
-		<title>FF Apps Archive (alpha)</title>
+		<title>FF Apps Archive</title>
 	</head>
 	<body>
 		<header>
-			<h1>FF Apps Archive (alpha)</h1>
-			<search hidden>
-				<input type="search" placeholder="Search" disabled>
-			</search>
+			<h1>FF Apps Archive (beta)</h1>
 		</header>
 		<main>
-			<p>FF Apps Archive will contain thousands of apps from the defunct Firefox Marketplace.
+			<p>FF Apps Archive contains thousands of apps from the defunct Firefox Marketplace.
 			</p>
 			<p><a href="all">All Apps</a></p>
-			<p><a href="packaged">Packaged Apps</a></p>
-			<p><a href="privileged">Privileged Apps</a></p>
+			<p><a href="packaged">Packaged Apps - can be installed here</a></p>
+			<p><a href="privileged">Privileged Apps - cannot be installed directly and must be sideloaded using developer tools</a></p>
 			<p><a href="hosted">All Hosted Apps</a></p>
-			<p><a href="live">Live Hosted Apps</a></p>
-			<p><a href="dead">Dead Hosted Apps</a></p>
+			<p><a href="live">Live Hosted Apps - can be installed, but might no longer function</a></p>
+			<p><a href="dead">Dead Hosted Apps - cannot be installed</a></p>
+			<p>
+				Firefox apps can be installed on any version of Firefox OS and on old versions of the Firefox web browser v16 - v46.<br>
+				<a href="https://ftp.mozilla.org/pub/firefox/releases/45.9.0esr/">Firefox desktop v45</a><br>
+				<a href="https://archive.mozilla.org/pub/mobile/releases/45.0.2/">Firefox Android v45</a><br>
+				<a href="https://freesoft.net/android/firefox_os_25_developer_preview">Firefox OS 2.5 Android launcher</a>
+			</p>
 		</main>
 		<Footer/>
 	</body>
