--- a/src/pages/packaged.astro
+++ b/src/pages/packaged.astro
@@ -2,8 +2,9 @@
 import * as Content from "astro:content"
 
 import Imports from "../components/common_imports.astro"
-import Footer from "../components/footer.astro"
 import Metadata from "../components/common_metadata.astro"
+import Header from "../components/header.astro"
+import Footer from "../components/footer.astro"
 import AppsList from "../components/apps_list.astro"
 
 let packaged = await Content.getCollection("metadata", ({ data }) => data.app_type == "packaged")
@@ -13,16 +14,16 @@ let packaged = await Content.getCollection("metadata", ({ data }) => data.app_ty
 <html lang="en">
 	<head>
 		<Imports/>
-
 		<Metadata/>
 		<title>All Packaged Apps - FF Apps Archive</title>
 	</head>
 	<body>
-		<header>
-			<h1><a href="/">All Packaged Apps - FF Apps Archive (beta)</a></h1>
-		</header>
+		<Header/>
 		<main>
-			<AppsList apps={packaged}/>
+			<header>
+				<h2>All Packaged Apps</h2>
+			</header>
+			<AppsList apps={ packaged }/>
 		</main>
 		<Footer/>
 	</body>
