--- a/public/common.css
+++ b/public/common.css
@@ -1,3 +1,11 @@
 * {
 	box-sizing: border-box;
 }
+header img {
+	float: left;
+	margin-right: 1em;
+}
+#categories_list, #apps_list {
+	list-style: none;
+	padding: 0;
+}
