--- a/src/components/common_imports.astro
+++ b/src/components/common_imports.astro
@@ -1,3 +1,3 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/common.css">
-<link rel="icon" href="/rocket_32.png" type="image/png">
+<link rel="icon" href="/icons/rocket_32.png" type="image/png">
