--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,18 +2,20 @@
 import Imports from "../components/common_imports.astro"
 import Footer from "../components/footer.astro"
 import Metadata from "../components/common_metadata.astro"
+import Header from "../components/header.astro"
+import Categories from "../components/categories.astro"
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<Imports/>
-
 		<Metadata/>
 		<title>FF Apps Archive</title>
 	</head>
 	<body>
 		<header>
+			<img src="/icons/rocket_bag_64.png" srcset="/icons/rocket_bag_128.png 2x, /icons/rocket_bag_512.png 8x" alt="" width="64" height="64">
 			<h1>FF Apps Archive (beta)</h1>
 		</header>
 		<main>
@@ -25,6 +27,7 @@ import Metadata from "../components/common_metadata.astro"
 			<p><a href="hosted">All Hosted Apps</a></p>
 			<p><a href="live">Live Hosted Apps - can be installed, but might no longer function</a></p>
 			<p><a href="dead">Dead Hosted Apps - cannot be installed</a></p>
+			<Categories/>
 			<p>
 				Firefox apps can be installed on any version of Firefox OS and on old versions of the Firefox web browser v16 - v46.<br>
 				<a href="https://ftp.mozilla.org/pub/firefox/releases/45.9.0esr/">Firefox desktop v45</a><br>
