--- a/public/details.css
+++ b/public/details.css
@@ -1,8 +1,8 @@
 h1 {
-	font-size: x-large;
+	font-size: 2em;
 }
 h2 {
-	font-size: xx-large;
+	font-size: 3em;
 }
 #screenshots_list {
 	display: -moz-box;
@@ -18,7 +18,7 @@ img {
 #action_buttons > * {
 	display: block;
 	width: 100%;
-	font-size: large;
+	font-size: 1.5em;
 	padding: 0.5em 2em;
 	margin-bottom: 1em;
 	border: thin solid lightgrey;
