--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,5 +1,6 @@
-
 <header>
-	<img src="/icons/rocket_bag_32.png" srcset="/icons/rocket_bag_64.png 2x, /icons/rocket_bag_128.png 4x" alt="" width="32" height="32">
-	<a href="/"><h1>FF Apps Archive (beta)</h1></a>
+	<a href="/">
+		<img src="/icons/rocket_bag_64.png" srcset="/icons/rocket_bag_128.png 2x, /icons/rocket_bag_512.png 8x" alt="" width="64" height="64">
+		<h1>FF Apps Archive (beta)</h1>
+	</a>
 </header>
