--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import Imports from "../components/common_imports.astro"
 import Footer from "../components/footer.astro"
 import Metadata from "../components/common_metadata.astro"
-import Header from "../components/header.astro"
 import Categories from "../components/categories.astro"
 ---
 
@@ -21,18 +20,25 @@ import Categories from "../components/categories.astro"
 		<main>
 			<p>FF Apps Archive contains thousands of apps from the defunct Firefox Marketplace.
 			</p>
-			<p><a href="all">All Apps</a></p>
-			<p><a href="packaged">Packaged Apps - can be installed here</a></p>
-			<p><a href="privileged">Privileged Apps - cannot be installed directly and must be sideloaded using developer tools</a></p>
-			<p><a href="hosted">All Hosted Apps</a></p>
-			<p><a href="live">Live Hosted Apps - can be installed, but might no longer function</a></p>
-			<p><a href="dead">Dead Hosted Apps - cannot be installed</a></p>
+			<p><a href="all/1">All Apps</a></p>
+			<p><a href="packaged/1">Packaged Apps - can be installed here</a></p>
+			<p><a href="privileged/1">Privileged Apps - cannot be installed directly and must be sideloaded using developer tools</a></p>
+			<p><a href="hosted/1">All Hosted Apps</a></p>
+			<p><a href="live/1">Live Hosted Apps - can be installed, but might no longer function</a></p>
+			<p><a href="dead/1">Dead Hosted Apps - cannot be installed</a></p>
 			<Categories/>
 			<p>
 				Firefox apps can be installed on any version of Firefox OS and on old versions of the Firefox web browser v16 - v46.<br>
 				<a href="https://ftp.mozilla.org/pub/firefox/releases/45.9.0esr/">Firefox desktop v45</a><br>
 				<a href="https://archive.mozilla.org/pub/mobile/releases/45.0.2/">Firefox Android v45</a><br>
 				<a href="https://freesoft.net/android/firefox_os_25_developer_preview">Firefox OS 2.5 Android launcher</a>
+			</p>
+			<p>
+				For instructions on sideloading privileged apps on Firefox OS, see <a href="sideloading">Sideloading Instructions</a>.
+			</p>
+			<p>Credits:<br>
+				<a href="https://danielherr.software">Daniel Herr</a> - Project Creator and Engineer<br>
+				<a href="https://t.me/ileios">Dimitrios Vlachos</a> - Community Manager
 			</p>
 		</main>
 		<Footer/>
