--- a/src/pages/live/index.astro
+++ b/src/pages/live/index.astro
@@ -1,17 +1,18 @@
 ---
-import Imports from "../components/common_imports.astro"
-import Metadata from "../components/common_metadata.astro"
-import Header from "../components/header.astro"
-import Footer from "../components/footer.astro"
-import AppsList from "../components/apps_list.astro"
+import Imports from "../../components/common_imports.astro"
+import Metadata from "../../components/common_metadata.astro"
+import Header from "../../components/header.astro"
+import Footer from "../../components/footer.astro"
+import AppsList from "../../components/apps_list.astro"
 
-import { live, total } from "../validateHostedApps.js"
+import { live, total } from "../../validateHostedApps.js"
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<Imports/>
+		<link rel="stylesheet" href="/lists.css">
 		<Metadata/>
 		<title>All Live Hosted Apps - FF Apps Archive</title>
 	</head>
