--- a/src/pages/all/[page].astro
+++ b/src/pages/all/[page].astro
@@ -7,6 +7,8 @@ import Header from "../../components/header.astro"
 import Footer from "../../components/footer.astro"
 import AppsList from "../../components/apps_list.astro"
 
+import { live } from "../../validate_hosted_apps.js"
+
 const characters = [ "1", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z" ]
 
 export async function getStaticPaths() {
@@ -17,7 +19,9 @@ export async function getStaticPaths() {
 
 let { page } = Astro.params
 
-let apps = await Content.getCollection("metadata", function(app) {
+let packaged = await Content.getCollection("metadata", app => app.data.app_type != "hosted")
+
+let apps = packaged.concat(live).filter(function(app) {
 	let name = app.data.name["en-US"] ?? app.data.name.en ?? app.data.name[app.data.default_locale]
 	let starting = name[0].toUpperCase()
 	if(! characters.includes(starting)) {
