--- a/src/pages/dead/[page].astro
+++ b/src/pages/dead/[page].astro
@@ -7,7 +7,7 @@ import Header from "../../components/header.astro"
 import Footer from "../../components/footer.astro"
 import AppsList from "../../components/apps_list.astro"
 
-import { dead, total } from "../../validateHostedApps.js"
+import { dead } from "../../validate_hosted_apps.js"
 
 const characters = [ "1", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z" ]
 
