--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,12 +23,11 @@ import Categories from "../components/categories.astro"
 			<p><a href="all/1">All Apps</a></p>
 			<p><a href="packaged/1">Packaged Apps - can be installed here</a></p>
 			<p><a href="privileged/1">Privileged Apps - cannot be installed directly and must be sideloaded using developer tools</a></p>
-			<p><a href="hosted/1">All Hosted Apps</a></p>
-			<p><a href="live/1">Live Hosted Apps - can be installed, but might no longer function</a></p>
+			<p><a href="hosted/1">Hosted Apps - possibly installable, but might no longer function</a></p>
 			<p><a href="dead/1">Dead Hosted Apps - cannot be installed</a></p>
 			<Categories/>
 			<p>
-				Firefox apps can be installed on any version of Firefox OS and on old versions of the Firefox web browser v16 - v46.<br>
+				Firefox apps can be installed on any version of Firefox OS and on old versions of the Firefox web browser until v46.<br>
 				<a href="https://ftp.mozilla.org/pub/firefox/releases/45.9.0esr/">Firefox desktop v45</a><br>
 				<a href="https://archive.mozilla.org/pub/mobile/releases/45.0.2/">Firefox Android v45</a><br>
 				<a href="https://freesoft.net/android/firefox_os_25_developer_preview">Firefox OS 2.5 Android launcher</a>
