--- a/src/components/categories.astro
+++ b/src/components/categories.astro
@@ -5,7 +5,10 @@ import categories from "../categories.json" with { type: "json" }
 <ul id="categories_list">
 	{ categories.map((category) => (
 		<li>
-			<a href={ category.slug + "/1" }><img src={ "/icons/" + category.slug + ".png" } alt="">{ category.name }</a>
+			<a href={ "/" + category.slug + "/1" }><img src={ "/icons/" + category.slug + ".png" } alt="">{ category.name }</a>
 		</li>
 	)) }
+	<li>
+		<a href="/works-offline/1"><img src="/icons/works-offline.png" alt="">Works Offline</a>
+	</li>
 </ul>
