--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,6 +35,7 @@ import Categories from "../components/categories.astro"
 			<p>
 				For instructions on sideloading privileged apps on Firefox OS, see <a href="sideloading">Sideloading Instructions</a>.
 			</p>
+			<p><a href="contact">Contact FFAA</a></p>
 			<p>Credits:<br>
 				<a href="https://danielherr.software">Daniel Herr</a> - Project Creator and Engineer<br>
 				<a href="https://t.me/ileios">Dimitrios Vlachos</a> - Community Manager
