--- a/src/pages/[category]/[page].astro
+++ b/src/pages/[category]/[page].astro
@@ -6,6 +6,7 @@ import Metadata from "../../components/common_metadata.astro"
 import Header from "../../components/header.astro"
 import Footer from "../../components/footer.astro"
 import AppsList from "../../components/apps_list.astro"
+import Pagination from "../../components/pagination.astro"
 
 import categories from "../../categories.json" with { type: "json" }
 import { live } from "../../validate_hosted_apps.js"
@@ -38,30 +39,6 @@ let apps = packaged.concat(live).filter(function(app) {
 	}
 	return starting == page
 })
-
-const aIndex = 1
-let currentIndex = characters.indexOf(page)
-let prev = currentIndex > 0 ? characters[currentIndex - 1] : null
-let next = currentIndex < characters.length - 1 ? characters[currentIndex + 1] : null
-let cluster = []
-if(prev && characters.indexOf(prev) > aIndex) {
-	cluster.push(prev)
-}
-if(characters.indexOf(page) > aIndex) {
-	cluster.push(page)
-}
-if(next && characters.indexOf(next) > aIndex) {
-	cluster.push(next)
-}
-let display = [characters[0], characters[1]]
-if(cluster.length > 0) {
-  display.push("...")
-  display = [...display, ...cluster]
-}
-if(! cluster.includes("Z")) {
-  display.push("...")
-  display.push("Z")
-}
 ---
 
 <!doctype html>
@@ -69,6 +46,8 @@ if(! cluster.includes("Z")) {
 	<head>
 		<Imports/>
 		<link rel="stylesheet" href="/lists.css">
+		<link rel="stylesheet" href="/pagination.css">
+		<script src="/pagination.js" defer></script>
 		<link rel="icon" href={ "/icons/" + category + ".png" } type="image/png">
 		<Metadata/>
 		<title>Page { page } - { Astro.props.category.name } - FF Apps Archive</title>
@@ -81,15 +60,9 @@ if(! cluster.includes("Z")) {
 				<img src={ "/icons/" + category + ".png" } alt="" width="40" height="40">
 				<h2>{ Astro.props.category.name } - Page { page }</h2>
 			</header>
-			<nav aria-label="Pagination">
-				<a href={ "/" + category + "/" }>{ "View All" }</a>
-        { display.map((item) => item === "..." ? " ..." : <a href={ "../" + item } aria-current={item === page ? "page" : null} rel={item === prev ? "prev" : (item === next ? "next" : null)}>{ item }</a>) }
-			</nav>
+			<Pagination current={ page }/>
 			<AppsList apps={ apps }/>
-			<nav aria-label="Pagination">
-				<a href={ "/" + category + "/" }>{ "View All" }</a>
-        { display.map((item) => item === "..." ? " ..." : <a href={ "../" + item } aria-current={item === page ? "page" : null} rel={item === prev ? "prev" : (item === next ? "next" : null)}>{ item }</a>) }
-			</nav>
+			<Pagination current={ page }/>
 		</main>
 		<Footer/>
 	</body>
