--- a/src/pages/all/[page].astro
+++ b/src/pages/all/[page].astro
@@ -6,6 +6,7 @@ import Metadata from "../../components/common_metadata.astro"
 import Header from "../../components/header.astro"
 import Footer from "../../components/footer.astro"
 import AppsList from "../../components/apps_list.astro"
+import Pagination from "../../components/pagination.astro"
 
 import { live } from "../../validate_hosted_apps.js"
 
@@ -29,30 +30,6 @@ let apps = packaged.concat(live).filter(function(app) {
 	}
 	return starting == page
 })
-
-const aIndex = 1
-let currentIndex = characters.indexOf(page)
-let prev = currentIndex > 0 ? characters[currentIndex - 1] : null
-let next = currentIndex < characters.length - 1 ? characters[currentIndex + 1] : null
-let cluster = []
-if(prev && characters.indexOf(prev) > aIndex) {
-	cluster.push(prev)
-}
-if(characters.indexOf(page) > aIndex) {
-	cluster.push(page)
-}
-if(next && characters.indexOf(next) > aIndex) {
-	cluster.push(next)
-}
-let display = [characters[0], characters[1]]
-if(cluster.length > 0) {
-  display.push("...")
-  display = [...display, ...cluster]
-}
-if(! cluster.includes("Z")) {
-  display.push("...")
-  display.push("Z")
-}
 ---
 
 <!doctype html>
@@ -60,6 +37,8 @@ if(! cluster.includes("Z")) {
 	<head>
 		<Imports/>
 		<link rel="stylesheet" href="/lists.css">
+		<link rel="stylesheet" href="/pagination.css">
+		<script src="/pagination.js" defer></script>
 		<Metadata/>
 		<title>Page { page } - All Apps - FF Apps Archive</title>
 		<link rel="canonical" href="/all/">
@@ -70,15 +49,9 @@ if(! cluster.includes("Z")) {
 			<header>
 				<h2>All Apps - Page { page }</h2>
 			</header>
-			<nav aria-label="Pagination">
-				<a href="/all/">{ "View All" }</a>
-        { display.map((item) => item === "..." ? " ..." : <a href={ "../" + item } aria-current={item === page ? "page" : null} rel={item === prev ? "prev" : (item === next ? "next" : null)}>{item}</a>) }
-			</nav>
+			<Pagination current={page} />
 			<AppsList apps={ apps }/>
-			<nav aria-label="Pagination">
-				<a href="/all/">{ "View All" }</a>
-        { display.map((item) => item === "..." ? " ..." : <a href={ "../" + item } aria-current={item === page ? "page" : null} rel={item === prev ? "prev" : (item === next ? "next" : null)}>{item}</a>) }
-			</nav>
+			<Pagination current={page} />
 		</main>
 		<Footer/>
 	</body>
