--- a/src/pages/dead/[page].astro
+++ b/src/pages/dead/[page].astro
@@ -8,6 +8,7 @@ import Footer from "../../components/footer.astro"
 import AppsList from "../../components/apps_list.astro"
 
 import { dead } from "../../validate_hosted_apps.js"
+import Pagination from "../../components/pagination.astro"
 
 const characters = [ "1", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z" ]
 
@@ -27,30 +28,6 @@ let apps = dead.filter(app => {
 	}
 	return starting == page
 })
-
-const aIndex = 1
-let currentIndex = characters.indexOf(page)
-let prev = currentIndex > 0 ? characters[currentIndex - 1] : null
-let next = currentIndex < characters.length - 1 ? characters[currentIndex + 1] : null
-let cluster = []
-if(prev && characters.indexOf(prev) > aIndex) {
-	cluster.push(prev)
-}
-if(characters.indexOf(page) > aIndex) {
-	cluster.push(page)
-}
-if(next && characters.indexOf(next) > aIndex) {
-	cluster.push(next)
-}
-let display = [characters[0], characters[1]]
-if(cluster.length > 0) {
-  display.push("...")
-  display = [...display, ...cluster]
-}
-if(! cluster.includes("Z")) {
-  display.push("...")
-  display.push("Z")
-}
 ---
 
 <!doctype html>
@@ -58,6 +35,8 @@ if(! cluster.includes("Z")) {
 	<head>
 		<Imports/>
 		<link rel="stylesheet" href="/lists.css">
+		<link rel="stylesheet" href="/pagination.css">
+		<script src="/pagination.js" defer></script>
 		<Metadata/>
 		<title>Page { page } - Dead Hosted Apps - FF Apps Archive</title>
 		<link rel="canonical" href="/dead/">
@@ -68,15 +47,9 @@ if(! cluster.includes("Z")) {
 			<header>
 				<h2>Dead Hosted Apps - Page { page }</h2>
 			</header>
-			<nav aria-label="Pagination">
-				<a href="/dead/">{ "View All" }</a>
-        { display.map((item) => item === "..." ? " ..." : <a href={ "../" + item} aria-current={item === page ? "page" : null} rel={item === prev ? "prev" : (item === next ? "next" : null)}>{item}</a>) }
-			</nav>
+			<Pagination current={page} />
 			<AppsList apps={ apps }/>
-			<nav aria-label="Pagination">
-				<a href="/dead/">{ "View All" }</a>
-        { display.map((item) => item === "..." ? " ..." : <a href={ "../" + item} aria-current={item === page ? "page" : null} rel={item === prev ? "prev" : (item === next ? "next" : null)}>{item}</a>) }
-			</nav>
+			<Pagination current={page} />
 		</main>
 		<Footer/>
 	</body>
