Added PWA Installation. Closes #8.

--- a/src/components/common_metadata.astro
+++ b/src/components/common_metadata.astro
@@ -2,3 +2,5 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 <link rel="manifest" href="/manifest.json">
 <link rel="sitemap" href="/sitemap-index.xml">
+<meta http-equiv="origin-trial" content="AgFEdLIHhqkHKToKEougJV0KXM2H4mXRedu4m7H7JG3jzPAsY4xtn7Ie7MuDuUBDDFJMfgImLSuplSWnfhuZhgoAAABmeyJvcmlnaW4iOiJodHRwczovL2ZmYXBwcy5kYW5pZWxoZXJyLnNvZnR3YXJlOjQ0MyIsImZlYXR1cmUiOiJXZWJBcHBJbnN0YWxsYXRpb24iLCJleHBpcnkiOjE3ODM5ODcyMDB9">
+<meta http-equiv="origin-trial" content="A5KYADl1HHwUWHhBKo7ILW2L4u07w4UkpPzYPVGGhyCtc1q0CK7LD8nZG9BkIKPF+WWs98OXFzcVrI6BTUIwabUAAABmeyJvcmlnaW4iOiJodHRwczovL2ZmYXBwcy5kYW5pZWxoZXJyLnNvZnR3YXJlOjQ0MyIsImZlYXR1cmUiOiJXZWJBcHBJbnN0YWxsYXRpb24iLCJleHBpcnkiOjE3NjcyMzQ3Mzh9">
