--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Categories from "../components/categories.astro"
 <html lang="en">
 	<head>
 		<Imports/>
+		<script src="show_pwas.mjs" type="module"></script>
 		<Metadata/>
 		<title>FF Apps Archive</title>
 	</head>
@@ -25,6 +26,7 @@ import Categories from "../components/categories.astro"
 			<p><a href="privileged/1">Privileged Apps - cannot be installed directly and must be sideloaded using developer tools</a></p>
 			<p><a href="hosted/1">Hosted Apps - possibly installable, but might no longer function</a></p>
 			<p><a href="dead/1">Dead Hosted Apps - cannot be installed</a></p>
+			<p hidden><a href="pwa/1">Progressive Web Apps (PWAs) - can be installed in modern web browsers</a></p>
 			<Categories/>
 			<p>
 				Firefox apps can be installed on any version of Firefox OS and on old versions of the Firefox web browser until v46.<br>
